Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-603

Struct read method does not call validate

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.1
    • 0.2
    • Ruby - Library
    • None
    • Thrift gem 0.1.0.1, Ruby 1.8.6

    • Patch Available

    Description

      The C implementation of the struct read method fails to call validate after read. The write method already calls validate before attempting to write the struct. This inconsistency allows an object to be serialized and then deserialized as an invalid object (ex. missing required fields).

      Attachments

        1. read_validate.patch
          0.3 kB
          Alex Burkhart

        Activity

          People

            saterus Alex Burkhart
            saterus Alex Burkhart
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: