THRIFT-603. rb: Struct read method does not call validate After reading a struct, we will now call the struct's validate method.

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@825369 13f79535-47bb-0310-9956-ffa450edef68